--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "cde"]
 	path = cde
 	url = https://github.com/chipsalliance/cde.git
+[submodule "src/main/scala/subsystem/BwReg"]
+	path = src/main/scala/subsystem/BwReg
+	url = https://github.com/crsullivan13/BwReg
